# COSC-4P82-Final-Project

./: .clang-format  CMakeLists.txt  commit.py  edeeee.ods  input.file  run.sh
.cache/clangd/index/: aggregation.cpp.3D7EBE6C6EE8B669.idx  aggregation.h.10961E6F313783FF.idx  allocator.h.4285CBC0E2E30B67.idx  app.cpp.31056FF7DE1D18B5.idx  app.h.D817E0C960177D74.idx  appdef.h.9EE9D6B997A8F02B.idx  argparse.cpp.676267E193413084.idx  argparse.h.244E86358B8CDD60.idx  assert.cpp.A0CCE5E14160AA79.idx  assert.h.AA9BB1770E2F441F.idx  binary_tree.h.49E890000178E1E2.idx  blt_tests.h.1D0C2DB945DBA8AE.idx  boltzman.c.DBF2F160E0E28F11.idx  bstworst.c.227D0B0875D5E380.idx  change.c.B56A778C64E7B4E6.idx  ckpoint.c.A06A924E19E0E7A5.idx  compatibility.h.8131F3E9EE3FBAF8.idx  container_test.cpp.65B0617ABFE2BAFC.idx  crossovr.c.15367A64E2B16B39.idx  datastructure_tests.cpp.67FE8CB00EFEC399.idx  defines.h.EB3DD1D3E2339535.idx  ephem.c.7CD512021496A8CD.idx  error.cpp.2C3C26651BEE53F0.idx  error.h.F3EF738728806D48.idx  eval.c.206CD31C19D20764.idx  event.c.D055688EA450410D.idx  event.h.935457579AA944F5.idx  exch.c.D252C59AA2EA8455.idx  expected.h.3804E4F975016D78.idx  filesystem.cpp.22794819ACB56DCC.idx  filesystem.h.0B1C024CB40A194C.idx  fitness.c.821FCF529D9C5AC6.idx  format.cpp.FE57576A5A6A58A4.idx  format.h.DC465948D81A02AD.idx  fsetupdate.c.5F044F39756A93DE.idx  function.cpp.A8EB7ADCF66EAECC.idx  function.h.3A53F37A4FA528DD.idx  genspace.c.BAA53989AA580895.idx  gp.c.15821CF06FC4059F.idx  hashmap.h.3A81F1A94E64EED4.idx  (+71 more)
.fuckoff/: .name  vcs.xml  workspace.xml
PartA/crossover_100_mutation_100_elitism_0/: aggregated.tsv  crossover_100_mutation_100_elitism_0.tsv
PartA/crossover_100_mutation_100_elitism_0/run_0/: regress.bst  regress.fn  regress.gen  regress.his  regress.prg  regress.stt  regress.sys
PartA/crossover_100_mutation_100_elitism_0/run_1/: regress.bst  regress.fn  regress.gen  regress.his  regress.prg  regress.stt  regress.sys
PartA/crossover_100_mutation_100_elitism_0/run_2/: regress.bst  regress.fn  regress.gen  regress.his  regress.prg  regress.stt  regress.sys
PartA/crossover_100_mutation_100_elitism_0/run_3/: regress.bst  regress.fn  regress.gen  regress.his  regress.prg  regress.stt  regress.sys
PartA/crossover_100_mutation_100_elitism_0/run_4/: regress.bst  regress.fn  regress.gen  regress.his  regress.prg  regress.stt  regress.sys
PartA/crossover_100_mutation_100_elitism_0/run_5/: regress.bst  regress.fn  regress.gen  regress.his  regress.prg  regress.stt  regress.sys
PartA/crossover_100_mutation_100_elitism_0/run_6/: regress.bst  regress.fn  regress.his  regress.prg  regress.stt  regress.sys
PartA/crossover_100_mutation_100_elitism_2/: aggregated.tsv  crossover_100_mutation_100_elitism_2.tsv
PartA/crossover_90_mutation_10_elitism_0/: aggregated.tsv  crossover_90_mutation_10_elitism_0.tsv
PartA/crossover_90_mutation_10_elitism_2/: aggregated.tsv  crossover_90_mutation_10_elitism_2.tsv
PartB/90Cross10Mut2El/: aggregated.tsv  aggregated_fn.ods  aggregated_fn.tsv  aggregated_runs.tsv
PartB/90Cross10Mut2El/run_0/: regress.bst  (+5 more)
PartB/90Cross90Mut2El/: aggregated.tsv  aggregated_fn.tsv  aggregated_runs.tsv
Seminar/10gen/: aggregated_best_generations.ods  aggregated_best_generations.tsv  aggregated_best_hits.tsv  pyramid memory.ods  pyramid variant.ods
Seminar/normal/: aggregated_all.tsv  aggregated_best_fitness.tsv
Seminar/pyrimd 5gen/: .~lock.aggregated_best_generations.tsv#  aggregated_all.tsv  aggregated_best_fitness.tsv  aggregated_best_generations.tsv  aggregated_best_hits.tsv
include/: aggregation.h  app.h  function.h  ipc.h  rice_loader.h
lib/beagle-3.0.3/: Makefile  Makefile.in  aclocal.m4  config.status  configure  libtool
lib/lilgp/: .cvsignore  README.html  bugs.html  peters-patch.html
report/: template_Report.aux  template_Report.out  template_Report.tex  template_Report.toc
src/program/: app.cpp  function.cpp  rice_loader.h.cpp
src/runner/: aggregation.cpp  main.cpp  main.disabled  main_new.cpp
(+557 files in other folders)
